Add side and remain_move

--- a/trainML.ipynb
+++ b/trainML.ipynb
@@ -110,18 +110,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "50ca854c4c3efc08975ea3cb237e66ea0431a08d0f81600bb6a2a9be70ab2e48"
+    "hash": "7a633bbdd5db1a17e2cf2e4198fbe054ef24d37c131cb8d63818bdb693592041"
    }
   }
  },
