--- a/trainML.ipynb
+++ b/trainML.ipynb
@@ -18,11 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from app.ml_model import initModel"
+    "from tensorflow import keras\n",
+    "import json\n",
+    "from app.ml_model import initModel\n",
+    "from app.legalmove import LEGALMOVE\n",
+    "from app.utils import xMove_to_xModel, yMove_to_yModel"
    ]
   },
   {
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +79,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- Đọc file\n",
+    "fileName = 'traindata/data00.json'\n",
+    "file = open(fileName, 'r')\n",
+    "fileData = json.load(file)\n",
+    "trainData = fileData[\"train_details\"]\n",
+    "# --- Dịch data trong file json thành data để train\n",
+    "x_train = []\n",
+    "y_train = []\n",
+    "for data in trainData:\n",
+    "    x = xMove_to_xModel(data[\"player\"], data[\"board\"])\n",
+    "    y = yMove_to_yModel(data[\"moveTuple\"])\n",
+    "    x_train.append(x)\n",
+    "    y_train.append(y)"
+   ]
   },
   {
    "attachments": {},
@@ -115,7 +133,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
